--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: DPpackage
-Version: 1.0-1
-Date: 2006-07-04
-Title: Semiparametric Bayesian Analysis using Dirichlet process priors
+Version: 1.0-2
+Date: 2006-09-18
+Title: Semiparametric Bayesian Analysis using Dirichlet process priors and Extensions
 Author: Alejandro Jara Vallejos <Alejandro.JaraVallejos@med.kuleuven.be>
 Maintainer: Alejandro Jara Vallejos <Alejandro.JaraVallejos@med.kuleuven.be> 
 Description: 
@@ -9,4 +9,4 @@ Description:
   semiparametric statistical models. Simulation is done in compiled FORTRAN.  
 License: GPL version 2 or newer
 URL: http://www.student.kuleuven.ac.be/%7Es0166452/software.html
-Packaged: Sat Jul  8 18:50:09 2006; Alejandro
+Packaged: Sun Oct 15 16:47:31 2006; Alejandro
