--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,10 +18,22 @@ export(
         DPpsBF,        
         DPrandom,
         DPrandom.default,
+        DPrasch,
+        DPrasch.default,
+        DPraschpoisson,
+        DPraschpoisson.default,
         DPsurvint,
         DPsurvint.default,
+        FPTbinary,
+        FPTbinary.default,
+        FPTrasch,
+        FPTrasch.default,
+        FPTraschpoisson,
+        FPTraschpoisson.default,
         Pbinary,
         Pbinary.default,
+        PTdensity,
+        PTdensity.default,
         PTlm,
         PTlm.default
 )
@@ -45,6 +57,8 @@ S3method(predict, DPbinary)
 
 S3method(print, DPdensity)
 S3method(plot, DPdensity)
+S3method(summary, DPdensity)
+S3method(print, summaryDPdensity)
 
 S3method(print, DPelicit)
 
@@ -68,19 +82,49 @@ S3method(print, DPpsBF)
 S3method(print, DPrandom)
 S3method(plot, DPrandom)
 
+S3method(print, DPrasch)
+S3method(plot, DPrasch)
+S3method(summary, DPrasch)
+S3method(print, summaryDPrasch)
+
+S3method(print, DPraschpoisson)
+S3method(plot, DPraschpoisson)
+S3method(summary, DPraschpoisson)
+S3method(print, summaryDPraschpoisson)
+
 S3method(print, DPsurvint)
 S3method(plot, DPsurvint)
 S3method(summary, DPsurvint)
 S3method(print, summaryDPsurvint)
 S3method(predict, DPsurvint)
-
 S3method(plot, predict.DPsurvint)
+
+S3method(print, FPTbinary)
+S3method(plot, FPTbinary)
+S3method(summary, FPTbinary)
+S3method(print, summaryFPTbinary)
+S3method(predict, FPTbinary)
+
+S3method(print, FPTrasch)
+S3method(plot, FPTrasch)
+S3method(summary, FPTrasch)
+S3method(print, summaryFPTrasch)
+
+S3method(print, FPTraschpoisson)
+S3method(plot, FPTraschpoisson)
+S3method(summary, FPTraschpoisson)
+S3method(print, summaryFPTraschpoisson)
 
 S3method(print, Pbinary)
 S3method(plot, Pbinary)
 S3method(summary, Pbinary)
 S3method(print, summaryPbinary)
 S3method(predict, Pbinary)
+
+S3method(print, PTdensity)
+S3method(plot, PTdensity)
+S3method(summary, PTdensity)
+S3method(print, summaryPTdensity)
 
 S3method(print, PTlm)
 S3method(plot, PTlm)
