--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,8 @@ export(
         DPmeta.default,
         DPmultmeta,
         DPmultmeta.default,
+        DPMdencens,
+        DPMdencens.default,
         DPMglmm,
         DPMglmm.default,
         DPMlmm,
@@ -156,6 +158,11 @@ S3method(summary, DPlmm)
 S3method(print, summaryDPlmm)
 S3method(anova, DPlmm)
 
+S3method(print, DPMdencens)
+S3method(plot, DPMdencens)
+S3method(summary, DPMdencens)
+S3method(print, summaryDPMdencens)
+
 S3method(print, DPmeta)
 S3method(plot, DPmeta)
 S3method(summary, DPmeta)
@@ -203,6 +210,11 @@ S3method(print, DPMraschpoisson)
 S3method(plot, DPMraschpoisson)
 S3method(summary, DPMraschpoisson)
 S3method(print, summaryDPMraschpoisson)
+
+#S3method(print, DPMsurvival)
+#S3method(plot, DPMsurvival)
+#S3method(summary, DPMsurvival)
+#S3method(print, summaryDPMsurvival)
 
 S3method(print, DPolmm)
 S3method(plot, DPolmm)
