--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: DPpackage
-Version: 1.1-4
-Date: 2012-01-02
+Version: 1.1-5
+Date: 2012-06-16
 Title: Bayesian nonparametric modeling in R
 Author@R: c(person("Alejandro", "Jara", email = "atjara@uc.cl"),
         person("Timothy", "Hanson", role = "ctb", email =
@@ -11,8 +11,9 @@ Author@R: c(person("Alejandro", "Jara", email = "atjara@uc.cl"),
         "grosner@jhmi.edu"))
 Author: Alejandro Jara <atjara@uc.cl> with contributions from Timothy
         Hanson <hanson@biostat.umn.edu>, Fernando A. Quintana
-        <quintana@mat.puc.cl>, Peter Mueller <pmueller@math.utexas.edu>,
-        and Gary L. Rosner <grosner@jhmi.edu>.
+        <quintana@mat.puc.cl>, Peter Mueller
+        <pmueller@math.utexas.edu>, and Gary L. Rosner
+        <grosner@jhmi.edu>.
 Maintainer: Alejandro Jara <atjara@uc.cl>
 Depends: R (>= 2.10), MASS, nlme, survival, splines
 Description: This package contains functions to perform inference via
@@ -21,25 +22,24 @@ Description: This package contains functions to perform inference via
         the package was motivated by the Dirichlet Process prior, the
         package considers and will consider other priors on functional
         spaces. So far, DPpackage includes models considering Dirichlet
-        Processes, Dependent Dirichlet Processes, Dependent Poisson- 
-        Dirichlet Processes, Hierarchical Dirichlet Processes, Polya Trees, 
-        Linear Dependent Tailfree Processes,
-        Mixtures of Triangular distributions,
-        Random Bernstein polynomials priors and Dependent Bernstein Polynomials. 
-        The package also includes 
-        models considering Penalized B-Splines. Currently the package 
-        includes semiparametric models for marginal and conditional density 
-        estimation, ROC curve analysis, interval censored data, binary 
-        regression models, generalized linear mixed models, IRT type 
-        models, and generalized additive models. The package also contains
-        functions to compute Pseudo-Bayes factors for model comparison,
-        and to elicitate the precision parameter of the Dirichlet
-        Process. To maximize computational efficiency, the actual
-        sampling for each model is done in compiled FORTRAN. The
+        Processes, Dependent Dirichlet Processes, Dependent Poisson-
+        Dirichlet Processes, Hierarchical Dirichlet Processes, Polya
+        Trees, Linear Dependent Tailfree Processes, Mixtures of
+        Triangular distributions, Random Bernstein polynomials priors
+        and Dependent Bernstein Polynomials.  The package also includes
+        models considering Penalized B-Splines. Currently the package
+        includes semiparametric models for marginal and conditional
+        density estimation, ROC curve analysis, interval censored data,
+        binary regression models, generalized linear mixed models, IRT
+        type models, and generalized additive models. The package also
+        contains functions to compute Pseudo-Bayes factors for model
+        comparison, and to elicitate the precision parameter of the
+        Dirichlet Process. To maximize computational efficiency, the
+        actual sampling for each model is done in compiled FORTRAN. The
         functions return objects which can be subsequently analyzed
         with functions provided in the coda package.
 License: GPL (>= 2)
 URL: http://www.mat.puc.cl/~ajara
-Packaged: 2012-01-03 06:54:40 UTC; root
+Packaged: 2012-06-14 06:07:11 UTC; root
 Repository: CRAN
-Date/Publication: 2012-01-03 08:37:40
+Date/Publication: 2012-06-15 19:44:49
